// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot, ContextPanel variants > collapsed: renders rail button, not slot content 1`] = `
<div
  class="flex h-full w-full justify-end pr-4 pt-4"
>
  <button
    aria-label="expand context panel"
    class="h-fit rounded-sm p-0.5 text-muted-foreground hover:bg-muted hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)]"
    title="expand context panel"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-panel-right-open"
      fill="none"
      height="13"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="3"
      />
      <path
        d="M15 3v18"
      />
      <path
        d="m10 15-3-3 3-3"
      />
    </svg>
  </button>
</div>
`;

exports[`snapshot, ContextPanel variants > expanded: renders slot content, not rail button 1`] = `
<div
  class="h-full w-full justify-end pr-4 pt-4 hidden"
>
  <button
    aria-label="expand context panel"
    class="h-fit rounded-sm p-0.5 text-muted-foreground hover:bg-muted hover:text-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-focus-ring)]"
    title="expand context panel"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-panel-right-open"
      fill="none"
      height="13"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        width="18"
        x="3"
        y="3"
      />
      <path
        d="M15 3v18"
      />
      <path
        d="m10 15-3-3 3-3"
      />
    </svg>
  </button>
</div>
`;
